force-app/main/default/objects/c_TestSettings__mdt/c_TestSettings__mdt.object-meta.xml
<CustomObject>
    <description>Settings for running unit tests. The first test setting marked as &#39;active&#39; will be used by tests. Ensure at least record one record is active.</description>
    <label>Test Setting</label>
    <pluralLabel>Test Settings</pluralLabel>
</CustomObject>