force-app/main/default/objects/c_TestSettings__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Marks this as the active test context to use. The most recently modified &#39;Active&#39; record is the one chosen.</description>
    <inlineHelpText>Marks this as the active test context to use. The most recently modified &#39;Active&#39; record is the one chosen.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>