force-app/main/default/objects/c_TestSettings__mdt/fields/BULKIFY_TESTS__c.field-meta.xml
<CustomField>
    <fullName>BULKIFY_TESTS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Define if tests should run with large data sets or not. Default is FALSE as bulk tests should be run before releases to production.</description>
    <inlineHelpText>Define if tests should run with large data sets or not. Default is FALSE as bulk tests should be run before releases to production.</inlineHelpText>
    <label>BULKIFY_TESTS</label>
    <type>Checkbox</type>
</CustomField>