force-app/main/default/objects/c_TestSettings__mdt/fields/COUNTRY_CODE__c.field-meta.xml
<CustomField>
    <fullName>COUNTRY_CODE__c</fullName>
    <defaultValue>&quot;SE&quot;</defaultValue>
    <description>Country code for test context</description>
    <inlineHelpText>Country code for test context</inlineHelpText>
    <label>COUNTRY_CODE</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>