force-app/main/default/objects/c_TestSettings__mdt/fields/COUNTRY_NAME__c.field-meta.xml
<CustomField>
    <fullName>COUNTRY_NAME__c</fullName>
    <defaultValue>&quot;Sweden&quot;</defaultValue>
    <description>Country name for test context</description>
    <inlineHelpText>Country name for test context</inlineHelpText>
    <label>COUNTRY_NAME</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>