force-app/main/default/objects/c_TestSettings__mdt/fields/CURRENCY_ISO_CODE__c.field-meta.xml
<CustomField>
    <fullName>CURRENCY_ISO_CODE__c</fullName>
    <defaultValue>&quot;EUR&quot;</defaultValue>
    <description>Default Currency ISO code to be used in test context</description>
    <inlineHelpText>Default Currency ISO code to be used in test context</inlineHelpText>
    <label>CURRENCY_ISO_CODE</label>
    <length>7</length>
    <required>true</required>
    <type>Text</type>
</CustomField>