force-app/main/default/objects/c_TestSettings__mdt/fields/EMAIL_ENCODING_KEY__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_ENCODING_KEY__c</fullName>
    <defaultValue>&quot;UTF-8&quot;</defaultValue>
    <description>Encoding key for sending emails in test context</description>
    <inlineHelpText>Encoding key for sending emails in test context</inlineHelpText>
    <label>EMAIL_ENCODING_KEY</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>