force-app/main/default/objects/c_TestSettings__mdt/fields/LANGUAGE_LOCALE_KEY__c.field-meta.xml
<CustomField>
    <fullName>LANGUAGE_LOCALE_KEY__c</fullName>
    <defaultValue>&quot;en_US&quot;</defaultValue>
    <description>Locale key for language in test context</description>
    <inlineHelpText>Locale key for language in test context</inlineHelpText>
    <label>LANGUAGE_LOCALE_KEY</label>
    <length>7</length>
    <required>true</required>
    <type>Text</type>
</CustomField>