force-app/main/default/objects/c_TestSettings__mdt/fields/LOCALE_SID_KEY__c.field-meta.xml
<CustomField>
    <fullName>LOCALE_SID_KEY__c</fullName>
    <defaultValue>&quot;en_US&quot;</defaultValue>
    <description>The SID locale key for test context ex. en_US</description>
    <inlineHelpText>The SID locale key for test context ex. en_US</inlineHelpText>
    <label>LOCALE_SID_KEY</label>
    <length>7</length>
    <required>true</required>
    <type>Text</type>
</CustomField>