force-app/main/default/objects/c_TestSettings__mdt/fields/TIMEZONE_SID_KEY__c.field-meta.xml
<CustomField>
    <fullName>TIMEZONE_SID_KEY__c</fullName>
    <defaultValue>&quot;Europe/Helsinki&quot;</defaultValue>
    <description>The SID key of the timezone to be used in test context, ex. Europe/Helsinki</description>
    <inlineHelpText>The SID key of the timezone to be used in test context, ex. Europe/Helsinki</inlineHelpText>
    <label>TIMEZONE_SID_KEY</label>
    <length>50</length>
    <type>Text</type>
</CustomField>